<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">南召检察</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_versionCode">11</string>
    <string name="app_versionName">1.1.0</string>
    
    
    <string name="maintitle">南召县人民检察院</string>
    <string name="sexmale">男</string>
    <string name="sexfemale">女</string>
    <string name="emailstr">电子邮箱</string>
    <string name="phonenumber">手机号码 *</string>
    <string name="telephonenumber">固定电话</string>
    <string name="mailaddress">邮寄地址 *</string>
    <string name="applypeopleinfo">申请人信息</string>
    <string name="applyepeoplename">姓名或法人名称 *</string>
    <string name="longaddress">经常居住地或工作单位 *</string>
    <string name="peopleidorfirmid">身份证号码或组织机构代码证 *</string>
    <string name="featuresdescription">请填写申请事项的详细内容、特征、关键信息等</string>
    <string name="purpose">用途 *</string>
    <string name="commitapply">提交申请</string>
    <string name="querytext">查询</string>
    <string name="applyopenitem">申请公开事项</string>
    <string name="querycommitedapply">查询已提交的申请</string>
    <string name="applynumber">申请编号 *</string>
    

</resources>
