<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!-- 导航栏 -->
    <LinearLayout
        android:id="@+id/topAskForOpen"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <include layout="@layout/top_title" />
    </LinearLayout> 
	<TabHost
	    android:layout_below="@id/topAskForOpen"
	    android:id="@+id/topAskForOpenTabHost"
	    android:layout_width="match_parent"
	    android:layout_height="40dp" >
        
	    <LinearLayout 
	        android:id="@+id/openClassifyLinearLayout"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:orientation="horizontal"
	        android:baselineAligned="false">
	         
	        <TabWidget
	        	android:layout_weight="0"
	            android:id="@android:id/tabs"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />
	        
	        <FrameLayout
	       		android:gravity="bottom"
	       		android:layout_weight="1"
	            android:id="@android:id/tabcontent"          
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:padding="0dp">
				<TextView android:id="@+id/askForOpenView1" 
	                android:layout_width="fill_parent"  
	                android:layout_height="fill_parent"/>  
	            <TextView android:id="@+id/askForOpenView2" 
	                android:layout_width="fill_parent"  
	                android:layout_height="fill_parent"/>      
	        </FrameLayout>
	    </LinearLayout>
	    
    </TabHost>
    
    <ScrollView 
        android:layout_below="@id/topAskForOpenTabHost"
        android:id="@+id/topAskForOpenScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
	        android:id="@+id/newAskForOpenLineLayout"
	        android:layout_marginLeft="8dp"
	        android:layout_width="344dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textSize="20sp"
    	    android:gravity="center"
    	    android:text="@string/applypeopleinfo"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openManNameEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="@string/applyepeoplename"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openWorkAddressEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="@string/longaddress"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openIDEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="@string/peopleidorfirmid"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<RadioGroup 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openSexRadioGroup"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal"
    	    android:layout_gravity="center_horizontal">
    	    <RadioButton 
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="@string/sexmale"
    	        android:id="@+id/openMale"
    	        android:checked="true"
    	        android:tag="1"/>
    	    <RadioButton 
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="@string/sexfemale"
    	        android:id="@+id/openFemale"
    	        android:tag="0"/>
    	</RadioGroup>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openEmailEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:inputType="textEmailAddress"
    	    android:hint="@string/emailstr"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openPhoneNumberEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:inputType="phone"
    	    android:hint="@string/phonenumber"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openTelphoneNumberEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:inputType="phone"
    	    android:hint="@string/telephonenumber"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openMailAddressEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="@string/mailaddress"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:inputType="textEmailAddress"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textSize="20sp"
    	    android:gravity="center"
    	    android:text="@string/applyopenitem"/>
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openApplyTypeTextView"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="案件诉讼文书、技术性鉴定材料"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openApplyContextEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:lines="4"
    	    android:hint="@string/featuresdescription"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:background="@drawable/comment_view_input_bg"
    	    android:inputType="textMultiLine"
			android:gravity="left|top"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openPurposeEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:lines="4"
    	    android:hint="@string/purpose"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:background="@drawable/comment_view_input_bg"
    	    android:inputType="textMultiLine"
			android:gravity="left|top"/>
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textSize="16sp"
    	    android:hint="信息的通知方式"/>
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openInfoNotificatonTextView"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="纸质版"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textSize="16sp"
    	    android:text="信息的获取方式"/>
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openInfoGetTypeTextView"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="自行领取"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<Button
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openOneCommitButton"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/commitapply"></Button>
    </LinearLayout>
    </ScrollView>
    
    <LinearLayout 
        android:layout_marginTop="5dp"
        android:layout_below="@id/topAskForOpenTabHost"
        android:id="@+id/askForOpenQueryLineLayout"
        android:layout_marginLeft="8dp"
	    android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textSize="20sp"
    	    android:text="@string/querycommitedapply"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/queryCommitedApplyEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="@string/applynumber"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<Button
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/openQueryButton"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/querytext"></Button>
    </LinearLayout>
    
</RelativeLayout>
