<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!-- 导航栏 -->
    <LinearLayout
        android:id="@+id/topOnlineBook"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <include layout="@layout/top_title" />
    </LinearLayout> 
	<TabHost
	    android:layout_below="@id/topOnlineBook"
	    android:id="@+id/topOnlineBookTabHost"
	    android:layout_width="match_parent"
	    android:layout_height="40dp" >
        
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:orientation="horizontal"
	        android:baselineAligned="false">
	         
	        <TabWidget
	        	android:layout_weight="0"
	            android:id="@android:id/tabs"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />
	        
	        <FrameLayout
	       		android:gravity="bottom"
	       		android:layout_weight="1"
	            android:id="@android:id/tabcontent"          
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:padding="0dp">
				<TextView android:id="@+id/onLineBookView1" 
	                android:layout_width="fill_parent"  
	                android:layout_height="fill_parent"/>  
	            <TextView android:id="@+id/onLineBookView2" 
	                android:layout_width="fill_parent"  
	                android:layout_height="fill_parent"/>      
	        </FrameLayout>
	    </LinearLayout>
	    
    </TabHost>
    
    <ScrollView 
        android:layout_below="@id/topOnlineBookTabHost"
        android:id="@+id/onlineBookScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
	        android:id="@+id/newOnlineBookLineLayout"
	        android:layout_marginLeft="8dp"
	        android:layout_width="344dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textSize="20sp"
    	    android:gravity="center"
    	    android:text="@string/applypeopleinfo"/>
    	<RadioGroup 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/newOnlineBookRadioGroup"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical"
    	    android:layout_gravity="center_horizontal">
    	    <RadioButton 
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="辩护人"
    	        android:id="@+id/onlineBookPleader"
    	        android:checked="true"
    	        android:tag="0"/>
    	    <RadioButton 
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="诉讼代理人(被害人方)"
    	        android:id="@+id/onlineBookCognitorOne"
    	        android:tag="1"/>
    	    <RadioButton 
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="诉讼代理人(被告方)"
    	        android:id="@+id/onlineBookCognitorTwo"
    	        android:tag="2"/>
    	</RadioGroup>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/lawFirmNameEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="律师事务所名称*"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>

    	<CheckBox 
    	    android:id="@+id/regularLawyerCheckBox"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="职业律师"/>
    	<CheckBox 
    	    android:id="@+id/assignLawyerCheckBox"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="法律援助中心指派"/>
		<CheckBox 
    	    android:id="@+id/needToAvoidCheckBox"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="需要回避"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookManNameEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="姓名*"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookManIDEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="身份证号*"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookManPhoneEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="手机*"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:inputType="phone"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textSize="20sp"
    	    android:gravity="center"
    	    android:text="犯罪嫌疑人(被告人)信息"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookDefendantNameEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="姓名 *"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<RadioGroup 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookSexRadioGroup"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal"
    	    android:layout_gravity="center_horizontal">
    	    <RadioButton 
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="@string/sexmale"
    	        android:id="@+id/onlineBookOpenMale"
    	        android:checked="true"
    	        android:tag="1"/>
    	    <RadioButton 
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="@string/sexfemale"
    	        android:id="@+id/onlineBookOpenFemale"
    	        android:tag="0"/>
    	</RadioGroup>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookDefendantIDEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="身份证号码 *"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textSize="14sp"
    	    android:text="出生年月"/>
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookBirthdayTextView"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/courtSelectTextView"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:text="南召县人民检察院"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="诉讼阶段:"/>
    	<RadioGroup 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookLawsuitSectionRadioGroup"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical">
    	    <RadioButton 
    	        android:id="@+id/lawsuitSectionOneRadioButton"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:text="侦查(自侦)"
    	        android:checked="true"
    	        android:tag="0"/>
    	    <RadioButton 
    	        android:id="@+id/lawsuitSectionTwoRadioButton"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:text="批捕"
    	        android:tag="1"/>
    	    <RadioButton 
    	        android:id="@+id/lawsuitSectionThreeRadioButton"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:text="起诉"
    	        android:tag="2"/>
    	    <RadioButton 
    	        android:id="@+id/lawsuitSectionFourRadioButton"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:text="抗诉"
    	        android:tag="3"/>
    	    <RadioButton 
    	        android:id="@+id/lawsuitSectionFiveRadioButton"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:text="其它"
    	        android:tag="4"/>
    	</RadioGroup>
    	<TextView 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="强制措施:"/>
    	<RadioGroup 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookForceStepRadioGroup"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical">
    	    <RadioButton 
    	        android:id="@+id/onlineBookForceStepOneRadioButton"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:text="无"
    	        android:checked="true"
    	        android:tag="0"/>
    	    <RadioButton 
    	        android:id="@+id/onlineBookForceStepTwoRadioButton"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:text="拘留"
    	        android:tag="1"/>
    	    <RadioButton 
    	        android:id="@+id/onlineBookForceStepThreeRadioButton"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:text="逮捕"
    	        android:tag="2"/>
    	    <RadioButton 
    	        android:id="@+id/onlineBookForceStepFourRadioButton"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:text="取保候审"
    	        android:tag="3"/>
    	    <RadioButton 
    	        android:id="@+id/onlineBookForceStepFiveRadioButton"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:text="监视居住"
    	        android:tag="4"/>
    	</RadioGroup>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookBriefEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="案由"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<TextView
    	    android:layout_marginTop="8dp" 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textSize="20sp"
    	    android:gravity="center"
    	    android:text="委托人信息"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookConsignorNameEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="姓名 *"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookConsignorIdEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="身份证号码"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textSize="20sp"
    	    android:gravity="center"
    	    android:text="预约内容"/>
    	<LinearLayout 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal"
    	    android:layout_marginLeft="1dp"
    	    android:gravity="center|left">
    	    <CheckBox 
    	        android:id="@+id/onlineBookTypeOne"
    	        android:layout_width="110dp"
    	        android:layout_height="wrap_content"
    	        android:text="申请阅卷"/>
    	    <CheckBox 
    	        android:id="@+id/onlineBookTypeTwo"
    	        android:layout_width="150dp"
    	        android:layout_height="wrap_content"
    	        android:text="申请会见承办人"/>
    	    <CheckBox 
    	        android:id="@+id/onlineBookTypeThree"
    	        android:layout_width="80dp"
    	        android:layout_height="wrap_content"
    	        android:text="其它"/>
    	</LinearLayout>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookOtherContentEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="其他预约内容"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookNoteEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:lines="4"
    	    android:hint="备注 *"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:background="@drawable/comment_view_input_bg"
    	    android:inputType="textMultiLine"
			android:gravity="left|top"/>
    	<Button
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookCommitButton"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/commitapply"></Button>
    </LinearLayout>
    </ScrollView>
    
    <LinearLayout 
        android:layout_marginTop="5dp"
        android:layout_below="@id/topOnlineBookTabHost"
        android:id="@+id/onlineBookQueryLineLayout"
        android:layout_marginLeft="8dp"
	    android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">
    	<TextView 
    	    android:layout_marginTop="8dp"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textSize="20sp"
    	    android:text="@string/querycommitedapply"/>
    	<EditText 
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookCommitedApplyEditText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="@string/applynumber"
    	    android:textSize="14sp"
    	    android:padding="8dp"
    	    android:singleLine="true"
    	    android:background="@drawable/comment_view_input_bg"/>
    	<Button
    	    android:layout_marginTop="8dp"
    	    android:id="@+id/onlineBookQueryButton"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/querytext"></Button>
    </LinearLayout>
    
</RelativeLayout>
